--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div id="app">
-        
+
+    </div>
+    <div id="gamePoints">
+
     </div>
 </body>
 <script src="index.js" defer></script>
